--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 html, body{
     margin: 0;
-    background-color: red;
 }
+#menubar > ul{
+    list-style: none;
+}
+#menubar{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: max-content;
+    box-shadow: 3px 21px 18px 11px rgba(0,0,0,0.03);
+}
+#foundinp {
+    background-color:#f2f0f0;
+    padding: 12px;
+    width: 250px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+}
+#foundinp > input{
+    border: none;
+    background: transparent;
+    outline: none;
+    caret-color: #d9d9d9;
+    font-size: 13px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
