--- a/style.css
+++ b/style.css
@@ -28,3 +28,18 @@ html, body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+#todolist > button {
+    padding: 8px;
+    width: 45px;
+    height: 45px;
+    background-color: #f2f0f0;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+}
+#todolist {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
