--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html, body{
     margin: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
+
 #menubar > ul{
     list-style: none;
 }
@@ -8,8 +12,11 @@ html, body{
     display: flex;
     align-items: center;
     width: 100%;
-    height: max-content;
-    box-shadow: 3px 21px 18px 11px rgba(0,0,0,0.03);
+    height: 10%;
+border-bottom: 1px solid gray;
+box-shadow: 4px 2px 6px 3px #f2f0f0;
+position: relative;
+z-index: 20;
 }
 #foundinp {
     background-color:#f2f0f0;
@@ -42,4 +49,9 @@ html, body{
     display: flex;
     align-items: center;
     gap: 18px;
+}
+#Document {
+    height: 90%;
+    width: 100%;
+    background-color: white;
 }
